# co-learning

./: .gitignore  .hc  Cargo.toml  README.md  default.nix  package-lock.json  package.json  pnpm-lock.yaml
dna/workdir/: dna.yaml  my-dna.dna
dna/zomes/my_zome/: Cargo.toml
dna/zomes/my_zome/src/: game_code.rs  lib.rs  player_profile.rs  utils.rs
tests/: package-lock.json
tests/src/: index.ts  utils.ts
tests/src/my-dna/: my_zome.ts
ui/: .gitignore  index.html  package.json  tsconfig.tsbuildinfo
ui/src/: holochain-app.ts  register-player.ts
workdir/: .hc  co-learning.happ  happ.yaml  web-happ.yaml
workdir/dna/: dna.yaml
zomes/my_zome/: Cargo.toml
zomes/my_zome/src/: game_code.rs  lib.rs  player_profile.rs
zomes/ping/: Cargo.toml
zomes/ping/src/: lib.rs  player_profile.rs  profile_anchor.rs
zomes/profiles/: Cargo.toml
zomes/profiles/src/: lib.rs
